# MultiAgentResearch

./: .gitignore  README.md  pyproject.toml
benchmarks/hle-matrix-canary-2/: manifest.json  tasks.jsonl
benchmarks/hle-mcq-30/: manifest.json  tasks.jsonl
benchmarks/hle-representative-40/: manifest.json  tasks.jsonl
benchmarks/hle-small-30/: manifest.json  tasks.jsonl
benchmarks/hle-smoke-5/: manifest.json  tasks.jsonl
data/: cheap-conditions.json  hle-all.jsonl  hle-matrix-canary-2-experiment.json  hle-representative-40-experiment.json  hle-smoke-5-experiment.json
docs/: benchmark-integration.md  experiment-plan.md
evals/: baseline-grid-parity.md  smoke-yoyo-unwinding.md  yoyo-adversarial-debate-results.md
examples/: prompt-overrides.json  run-baseline-workflows.sh  run-yoyo-adversarial-debate.sh  run-yoyo-reasoning-suites.sh  run-yoyo-smoke-workflows.sh
extensions/benchmark_tools/: README.md  __init__.py  analysis.py  charts.py  cli.py  config.py  connector.py  dashboard.py  example_conditions.json  experiment.py  grading.py  pipeline.py  (+8 more)
tests/: fakes.py  test_benchmark_analysis.py  test_benchmark_canary_config.py  test_benchmark_config.py  test_benchmark_connector.py  test_benchmark_dashboard.py  test_benchmark_experiment.py  test_benchmark_grading.py  test_benchmark_pipeline.py  test_benchmark_preflight.py  test_benchmark_progress.py  test_benchmark_rate_limit.py  test_benchmark_results.py  test_benchmark_runner.py  test_benchmark_smoke_config.py  test_litellm_client.py  test_prompt_overrides.py  test_provenance.py  test_viewer.py  test_workflows.py
(+57 files in other folders)
